# cml-parser

./: .gitignore  Análisis Sintáctico Context Mapper DSL.md  Model_parser_model.dot  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  test_full_coverage.py  test_missing_attributes.py  test_parser.py  test_tactical_ddd.py  textx_model_parse_tree.dot  textx_model_parser_model.dot
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: examples.es.md  examples.md  index.es.md  index.md  quickstart.es.md  quickstart.md  reference.es.md  reference.md  tutorial.es.md  tutorial.md  usage.es.md  usage.md
docs/tutorial/: application.es.md  application.md  index.es.md  index.md  requirements.es.md  requirements.md  strategic.es.md  strategic.md  tactical.es.md  tactical.md
src/cml_parser/: CML.g4  __init__.py  cml.tx  cml_objects.py  parser.py
src/cml_parser/antlr/: CML.interp  CML.tokens  CMLLexer.interp  CMLLexer.tokens  CMLParser.py
tests/: test_full_coverage.cml
