[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cml-parser"
version = "0.1.5"
description = "A Python parser for Context Mapper DSL (CML)"
readme = "README.md"
authors = [
  { name = "Martin Herran", email = "martin882003@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textX",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/martin882003/cml_parser"
"Bug Tracker" = "https://github.com/martin882003/cml_parser/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"cml_parser" = ["cml.tx"]

[tool.setuptools.packages.find]
where = ["src"]
